--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ email:             freddyxiong02@gmail.com
 description:       Observing the future, learning the past.
 author:            Frederic Xiong
 #url:               "localhost:4000"
-url:               "Glimpseofthepast.org"
+url:               "Fredericx172.github.io"
 baseurl:           "Glimpseofthepast.org"
 
 # Social Profiles
