--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 title:             Glimpse of The Past
 email:             freddyxiong02@gmail.com
-description:       Observing the future, learning the past.
+description:       Every Person Deserves Their History
 author:            Frederic Xiong
 #url:               "localhost:4000"
 url:               "Fredericx172.github.io"
-baseurl:           "Glimpseofthepast.org"
+baseurl:           
 
 # Social Profiles
 #twitter_username:  SBootstrap
